# acu

./: CHANGELOG.md  CODEOWNERS  Cargo.toml  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
acu-adapters/: Cargo.toml
acu-adapters/src/: config.rs  lib.rs
acu-adapters/src/ann_hnsw/: errors.rs  index.rs  mod.rs  snapshot.rs
acu-adapters/src/blobs/: errors.rs  fs.rs  mod.rs  s3.rs
acu-adapters/src/eventstore/: mod.rs
acu-adapters/src/observability/: mod.rs
acu-adapters/src/projections_kv/: errors.rs  mod.rs  rocks.rs  sqlite.rs
acu-adapters/src/readstore/: mod.rs
acu-adapters/src/snapshots/: errors.rs  integrity.rs  mod.rs  rotation.rs
acu-adapters/tests/: ann_hnsw_it.rs  blobs_fs_it.rs  projections_sqlite_it.rs  snapshots_it.rs
acu-agent/: Cargo.toml
acu-agent/src/: lib.rs
acu-agent/src/application/: mod.rs
acu-agent/src/domain/: mod.rs
acu-agent/src/events/: curiosity.rs  integrations.rs  interaction.rs  knowledge.rs  learning.rs  memory.rs  meta.rs  mod.rs  profile.rs  system.rs
acu-agent/src/projections/: mod.rs
acu-agent/src/tests/: mod.rs  replay_smoke.rs  serde_roundtrip.rs
acu-cli/: Cargo.toml
acu-cli/src/: main.rs
acu-curiosity/: Cargo.toml
acu-curiosity/src/: config.rs  engine.rs  errors.rs  lib.rs  scheduler.rs
acu-curiosity/tests/: curiosity_cycle_it.rs
acu-memory/: Cargo.toml
acu-memory/src/: config.rs  engine.rs  lib.rs
docs/en/: GLOSSARY.md  architecture.md  curiosity.md  events.md  index.md  memory-retention.md  (+3 more)
(+17 files in other folders)
