[package]
name = "acu-adapters"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
rusqlite = { version = "0.29", features = ["bundled"] }
rocksdb = { version = "0.21", optional = true }
serde_json = "1"
bincode = "1"
sha2 = "0.10"
tempfile = "3"
walkdir = "2"
chrono = { version = "0.4", features = ["clock"] }

[features]
default = []
rocksdb = ["dep:rocksdb"]
s3 = []
