[package]
name = "acu-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
# To pin to a tag replace `branch` with `tag = "vX.Y.Z"`
aei-framework = { git = "https://github.com/SynarionTechnologies/aei-framework", branch = "main" }
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
ordered-float = { version = "3", features = ["serde"] }
